- Fix: [#12486] `set-rct2` has a broken g1.dat check.
- Fix: [#12498] Circus construction ghost does not rotate (original bug).
- Fix: [#12505] Stores selling multiple items can only have the first product advertised.
- Fix: [#12506] Cannot advertise food if there are no rides in the park.
- Fix: [#12533] Track designs list does not use natural sorting.
- Fix: 'j' character has broken kerning (original bug).
- Fix: RCT1 scenarios have more items in the object list than are present in the park or the research list.
- Fix: Brakes keep working during "Brakes failure".
- Fix: Guests maze pathfinding prefers a specific direction (original bug).
- Improved: [#6530] Allow water and land height changes on park borders.
- Improved: [#11390] Build hash written to screenshot metadata.
- Improved: [#3205] Make handymen less likely to get stuck in ride queues.
- Technical: [#8110] OpenRCT2 now uses a single directory name for title sequences instead of three.
- Technical: [#11517] Windows Vista is supported again (libzip regression in the previous release).
- Technical: The required version of macOS has been increased to 10.14 (Mojave) for plugin support.
- Removed: [#11820] Twitch support (relied on a server that has been down for a few years).

0.2.6 (2020-04-17)
------------------------------------------------------------------------
- Feature: [#10925] Show hovered values on finance charts.
- Feature: [#11013] Ctrl+C copies input dialog text to clipboard.
- Feature: [#11218] load_park command for console
- Feature: [#11272] Option for toggling notifications for 'Ride casualties' and 'Stuck or stalled vehicles'.
- Feature: [#11281] add_news_item command for console
- Feature: [#11300] Add powered launch and reverse incline launched shuttle mode to the Stand-Up Roller Coaster (for RCT1 parity).
- Fix: [#475] Water sides drawn incorrectly (original bug).
- Fix: [#6123, #7907, #9472, #11028] Cannot build some track designs with 4 stations (original bug).